<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/primary_color"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/calculatorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:onClick="navToCalculator"
        android:text="@string/calculator_button"
        android:textColor="@color/white"
        android:textColorHighlight="@color/primary_color"
        android:textColorHint="@color/primary_color"
        android:textColorLink="@color/primary_color"
        android:textSize="16sp"
        app:backgroundTint="@color/primary_color"
        app:backgroundTintMode="src_in"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/gradesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:onClick="navToGrades"
        android:text="@string/grades_button"
        android:textColor="@color/white"
        android:textColorHighlight="@color/primary_color"
        android:textColorHint="@color/primary_color"
        android:textColorLink="@color/primary_color"
        android:textSize="16sp"
        app:backgroundTint="@color/primary_color"
        app:backgroundTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>